[package]
authors = ["Akbar Fauzi <akbarfauzi1976@gmail.com"]
categories = ["graphics", "multimedia", "multimedia::video"]
description = "Modern, high-performance screen capture library for Rust. Cross-platform. Forked and extended from https://github.com/helmerapp/scap"
documentation = "https://docs.rs/scap"
edition = "2021"
keywords = ["screen", "recording", "video", "capture", "media"]
license = "MIT"
name = "scap"
readme = "README.md"
repository = "https://github.com/akbarfa49/scap"
rust-version = "1.71"
version = "0.0.9"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
sysinfo = "0.36.0"
tokio = { version = "1.46.1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
] }
windows-capture = "1.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
core-graphics-helmer-fork = "0.24.0"
objc = "0.2.7"
screencapturekit = "0.2.8"
screencapturekit-sys = "0.2.8"
tao-core-video-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
pipewire = "0.8.0"
rand = "0.8.5"
